고객 관리자 API 수정 - 인증
