# swagger-system.yaml
@@ -151,6 +151,18 @@ definitions:
       displayName:
         type: string
         description: 고객 표시명
+      userName:
+        type: string
+        description: 고객 사용자 아이디
+      password:
+        type: string
+        description: 패스워드
+      alg:
+        type: string
+        description: 패스워드 알고리즘
+      host:
+        type: string
+        description: 접속 호스트
       quota:
         type: integer
         description: 고객 쿼타
